<resources>
    <string name="app_name">As-Sunnah Trust QA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_about">About Us</string>
    <string name="action_help">Help</string>
    <string name="action_rate">Rate Us</string>

    <string name="aboutAppData">এই অ্যাপের সমস্ত তথ্যাদি নিম্নোক্ত ওয়েব সাইট থেকে নেয়া\n
    http://assunnahtrust.com/wps/ \n\nঅ্যাপ ডেভেলপারের আস সুন্নাহ ট্রাস্ট এর মেইন ডাটাবেসের এক্সেস নাই। তাই এই অ্যাপ থেকে সরাসরি প্রশ্ন করার কোন সুযোগ নাই।
    \n\nএকই কারণে ওয়েব সাইটে কোন প্রশ্নোত্তর প্রকাশের পর সেটা অ্যাপএ সাথে সাথে পাওয়া নাও যেতে পারে।
    \n\nঅ্যাপ ডেভেলপার মাঝে মাঝে এই অ্যাপ এর গ্লোবাল ডাটাবেস উপরোক্ত ওয়েব সাইট থেকে ডাটা নিয়ে আপডেট দিবেন। আপনার অপশন মেনুর Sync অপশন দ্বারা
    অ্যাপের ডাটাবেস আপডেট করতে পারবেন ইনশা আল্লাহ।\n\nমূল ওয়েব সাইটে প্রশ্নের নম্বর ঠিক মত না থাকায় অ্যাপ এর প্রশ্নের নম্বর ও মূল সাইটের প্রশ্নের উত্তরের
        সামঞ্জস্য রাখা সম্ভব হয়নি বলে আন্তরিক ভাবে দুঃখিত।\n\nRate Us অপশনটিতে গিয়ে অ্যাপটির রেটিং দিতে পারেন এবং অ্যাপটি
        সম্পর্কে আপনার মূল্যবান মতামত জানাতে পারেন। আপনাদের মতামত পেলে ভবিষ্যতে অ্যাপটির মান উন্নয়নে সুবিধা হবে।\n\nকোন প্রশ্নোত্তর শেয়ার করতে চাইলে প্রশ্নোত্তরটি প্রেস করে ধরে রাখুন। শেয়ার অপশন দেখালে শেয়ার করুন।
    \n\nঅ্যাপটি সবার সাথে শেয়ার করতে ভুলবেন না।</string>

    <string name="assunahTrust">আস সুন্নাহ ট্রাস্ট</string>
    <string name="assunahTrusstMoto">সুনাতে উদ্ভাসিত জীবনের জন্য</string>
    <string name="sir">ড.খোন্দকার আব্দুল্লাহ জাহাঙ্গীর রহিমাহুমুল্লাহ</string>
    <string name="degreeOfSir">Ph.D. (Riyad), M.A. (Riyad), M.M.(Dhaka)
        \nProfessor, Department of Al-Hadith \u0026 Islamic Studies Islamic University, Kushtia
    </string>
    <string name="aboutTheTrust">
        ‘সৃষ্টিজগতের রহমত’ স্বরূপ প্রেরিত মুহাম্মাদুর রাসূলুল্লাহ (সঃ)-এর আদর্শের প্রচার এবং এ আদর্শের প্রেরণায় মানবতার সেবা, উন্নয়ন ও মমতাপূর্ণ সমাজ ও বিশ্ব প্রতিষ্ঠার লক্ষ্যে এ ট্রাস্ট প্রতিষ্ঠিত। এর কর্মকাণ্ডের মধ্যে রয়েছে:\n\n
        (১) মানবীয় মূল্যবোধ, ধর্মীয় সম্প্রীতি, সহনশীলতা, ভালবাসা, প্রকৃতি ও পরিবেশ সংরক্ষণ, নৈতিকতা ও বিশ্বাস প্রচারে তথ্য প্রযুক্তি, গণমাধ্যম ও ইন্টারনেটের বহুমুখি ও সামগ্রিক ব্যবহারের ব্যবস্থা করা।\n
        (২) নারী, শিশু, বালক, বালিকা ও বয়স্কদের জন্য প্রাতিষ্ঠানিক ও অপ্রাতিষ্ঠানিক শিক্ষাদান, বিদ্যালয়-মাদ্রাসা, মহাবিদ্যালয়, বিশ্ববিদ্যালয়, ইন্সটিটিউট ইত্যাদি প্রতিষ্ঠা।\n
        (৩) মুহাম্মাদুর রাসূলুল্লাহ (সঃ), তাঁর শরীয়ত, সুন্নাত বা আদর্শের বিশ্বময় প্রচারের ব্যবস্থা করা এবং এ বিষয়ক সকল স্থানীয় বা বৈশ্বিক কুৎসাচার, অপপ্রচার, মিথ্যাচার বা অজ্ঞতার জ্ঞানবৃত্তিক ও তথ্যভিত্তিক প্রতিবাদ, প্রতিকার ও অপনোদনের ব্যবস্থা করা।\n
        (৪) তাওহীদ-সুন্নাহ ও বিশুদ্ধ ইসলামী নির্দেশনা বিষয়ক গবেষণা ও গ্রন্থ প্রণয়নে সহায়তা প্রদান এবং এ বিষয়ক পুস্তক, পুস্তিকা, প্রচারপত্র ইত্যাদি প্রকাশ, প্রচার ও বিতরণ করা।\n
        (৫) স্থানীয়, জাতীয় ও আন্তর্জাতিক পর্যায়ে কুইজ, প্রতিযোগিতা ইত্যাদির আয়োজন ও পুরস্কার প্রদান।\n
        (৬) সুন্নাতের প্রচারে দায়ী-প্রচারকরদের প্রশিক্ষণ ও ভাতা প্রদান।\n
        (৭) মক্তব, কুরআন-শিক্ষা কেন্দ্র, স্কুল-মাদ্রাসার শিক্ষক ও মসজিদের ইমামদের প্রশিক্ষণ, তথ্য-সহায়তা, ভাতা, বৃত্তি ইত্যাদি প্রদান।\n
        (৮) মাদ্রাসা, স্কুল, কলেজ ও বিশ্ববিদ্যালয়ের দরিদ্র ও মেধাবী ছাত্র-ছাত্রীদের বৃত্তি প্রদান।\n
        (৯) শিক্ষা, সম্প্রীতি ও ধর্ম বিষয়ক সংলাপ, আলোচনা, মাহফিল, সেমিনার ইত্যাদির আয়োজন করা।\n
        (১০) দরিদ্র, এতিম, বিধবা ও সমাজের দুর্বল-অসহায় শ্রেণীর মানুষদের দারিদ্র্য-দূরীকরণ, সন্তান-প্রতিপালন, শিক্ষা, কর্মসংস্থান, চিকিৎসা, আইনি জটিলতা ইত্যাদি বিষয়ে সহযোগিতা ও পরামর্শ প্রদান।\n
        (১১) মানব-সেবা, সমাজ-সেবা ও সৃষ্টির সেবা-মূলক যে কোনো কর্মে সহযোগিতা ও অংশগ্রহণ।\n
        (১২) কুরআন শিক্ষার জন্য মসজিদ ভিত্তিক মকতব, কুরআন-শিক্ষার প্রাথমিক বিদ্যালয়, হিফযুল কুরআন প্রতিষ্ঠান, শিক্ষক-প্রশিক্ষন কেন্দ্র, কুরআনের অর্থানুবাদ প্রকাশ, অর্থ-সহ কুরআন শিক্ষার বিভিন্ন কোর্স তৈরি করা।\n
        (১৩) এ সকল কর্মে বা ইসলাম সম্মত যে কোনো কর্মে জাতীয় বা আন্তর্জাতিক পর্যায়ের ব্যক্তি, সংস্থা, ট্রাস্ট, ফোরাম ইত্যাদির সাথে সহযোগিতা ও সমন্বয় করা।\n
    </string>
</resources>
