<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionUpdateDatabase"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionAbout"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionHelp"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionRateUs"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never" />
    <!--item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /-->
</menu>
