<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_16">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ajsirrh"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sir"
            android:textSize="@dimen/bigText" />
        <TextView
            android:padding="@dimen/standard_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/degreeOfSir"
            android:textSize="@dimen/mediumText" />
        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="@dimen/standard_16"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/assunahTrust"
            android:textSize="@dimen/bigText" />
        <TextView
            android:padding="@dimen/standard_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/assunahTrusstMoto"
            android:textSize="@dimen/mediumText" />
        <TextView
            android:text="@string/aboutTheTrust"
            android:gravity="clip_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

    </LinearLayout>
</ScrollView>